--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <form action="https://formsubmit.co/mateomiloloza@ssklivno.net" method="post">
                                 <input type="text" name="_honey" style="display: none;">
                                 <input type="hidden" name="_captcha" value="false">
+                                <input type="hidden" name="_next" value="https://oetam13524.github.io/contactformtest/success.html">
                                 <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="Name"></div>
                                 <div class="mb-3"><input class="form-control" type="email" id="email-2" name="email" placeholder="Email"></div>
                                 <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Message"></textarea></div>
